--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,13 @@
     margin: 0;
     padding: 0;
 }
+
+.container {
+    display: grid;
+    /*grid-template-columns: minmax(100px,1fr) minmax(100px,1fr) minmax(100px,1fr) minmax(100px,1fr);*/
+    '
+ grid-template-columns: repeat (auto-fit, minmax (100px, 2fr));
+    grid-template-rows: auto repeat (4, 1fr) auto;
+    height: 100vh;
+    row-gap: 1rem;
+    column-gap: 1rem;
