--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,25 @@
         background-color: red;
     }
 
+    #title {
+        font-size: 3rem;
+        text-align: center;
+        margin-top: 40px;
+    }
+
+    #subtitle {
+        text-align: center;
+        color: blueviolet;
+    }
+
     .item-2 {
         grid-column: 1 / 5;
         grid-row: 2 / 3;
         background-color: yellow;
+        background-image: url(".css/assets/images/sunshine.png");
+        background-repeat: no-repeat, no-repeat;
+        background-position: top;
+        background-size: cover;
     }
 
     .item-3 {
