--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,10 @@
 .item-2 {
     grid-column: 1 / 13;
     grid-row: 2 / 3;
-    background-color: yellow;
+    background-image: url("..css/assets/images/sunshine.png");
+    background-repeat: no-repeat, no-repeat;
+    background-position: top;
+    background-size: cover;
 }
 
 .item-3 {
@@ -74,6 +77,7 @@ button {
     max-height: 120px;
 }
 
+.item-2,
 .item-3,
 .item-5 {
     text-align: center;
