--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
 .item-2 {
     grid-column: 1 / 13;
     grid-row: 2 / 3;
-    background-image: url("..css/assets/images/sunshine.png");
+    background-image: url(".assets/images/sunshine.png");
     background-repeat: no-repeat, no-repeat;
     background-position: top;
     background-size: cover;
@@ -82,4 +82,17 @@ button {
 .item-5 {
     text-align: center;
     padding: 20px;
+}
+
+p {
+    margin-top: 15px;
+    text-indent: 15px;
+    text-align: left;
+    letter-spacing: 2px;
+    font-size: 14px;
+
+}
+
+h1 {
+    text-transform: uppercase;
 }
