--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
 .item-2 {
     grid-column: 1 / 13;
     grid-row: 2 / 3;
-    background-image: url(".assets/images/sunshine.png");
+    background-image: url("assets/images/sunshine.png");
     background-repeat: no-repeat, no-repeat;
     background-position: top;
     background-size: cover;
@@ -95,4 +95,8 @@ p {
 
 h1 {
     text-transform: uppercase;
+}
+
+h2 {
+    font-style: italic;
 }
