--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
 .item-2 {
     grid-column: 1 / 13;
     grid-row: 2 / 3;
-    background-image: url("assets/images/sunshine.png");
+    background-image: url("../images/sunshine.png");
     background-repeat: no-repeat, no-repeat;
     background-position: top;
     background-size: cover;
@@ -91,6 +91,7 @@ button {
     position: absolute;
     right: 150px;
     bottom: 22px;
+    /*transition: 0.3s;*/
 
 }
 
@@ -125,18 +126,20 @@ button:hover {
 }
 
 p {
-    margin-top: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     text-indent: 15px;
     text-align: left;
     letter-spacing: 2px;
-    font-size: 14px;
+    font-size: 16px;
 
 }
 
 h1 {
     text-transform: uppercase;
+    color: #838E83;
 }
 
 h2 {
     font-style: italic;
-}
+    color: #C9CEBD;
