--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     /*grid-template-columns: minmax(100px,1fr) minmax(100px,1fr) minmax(100px,1fr) minmax(100px,1fr);*/
     '
  grid-template-columns: repeat, (12, 1fr);
-    grid-template-rows: 10% repeat (2, rf) 3rf 1rf 10%;
+    grid-template-rows: 10% 1rf 4rf 3rf 1rf 10%;
     height: 100vh;
     row-gap: 1rem;
     column-gap: 1rem;
@@ -131,7 +131,7 @@ p {
     text-indent: 15px;
     text-align: left;
     letter-spacing: 2px;
-    font-size: 16px;
+    font-size: 14px;
 
 }
 
