--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,15 +20,60 @@ body {
     column-gap: 1rem;
 }
 
+/*header*/
 .item-1 {
     grid-column: 1 / 13;
     grid-row: 1 / 2;
     background-color: #6C6061;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    padding: 30px;
+    list-style: none;
+    width: minmax(50px, 450px);
+    margin-right: 2px;
+}
+
+ul li {
+    margin: 10px 0;
+    font-size: 14px;
+    font-weight: 700px;
+    color: #c9cebd;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #B2BCAA;
+}
+
+ul li a:hover {
+    color: #c9cebd;
+    transition: 0.5s;
+    text-decoration: underline;
+}
+
+.logo-div {
+    font size: 20px;
+    /*background-color: yellow;*/
+    margin-left: 50px;
+}
+
+.logo-paragraph {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .item-2 {
     grid-column: 1 / 13;
     grid-row: 2 / 3;
+    border-radius: 10px;
     background-image: url("../images/sunshine.png");
     background-repeat: no-repeat, no-repeat;
     background-position: top;
@@ -40,6 +85,7 @@ body {
     grid-column: 1 / 13;
     grid-row: 3 / 4;
     background-color: #B2BCAA;
+    border-radius: 10px;
     /*width: 95%;
   margin-right: auto;
   margin-left: auto;*/
@@ -107,7 +153,9 @@ button:hover {
     grid-column: 1 / 13;
     grid-row: 5 / 6;
     background-color: #B2BCAA;
+    border-radius: 10px;
 }
+
 
 .item-6 {
     grid-column: 1 / 13;
@@ -146,8 +194,7 @@ button:hover {
         text-indent: 15px;
         text-align: left;
         letter-spacing: 2px;
-        font-size: 14px;
-
+        font-size: 12px;
     }
 
     h1 {
@@ -158,3 +205,19 @@ button:hover {
     h2 {
         font-style: italic;
         color: #C9CEBD;
+
+        /*item-3 h3,
+        item-5 h3 {
+            text-align: center;
+        }*/
+
+        @media screen and (min-width: 375px) {
+            .menu {
+                flex-direction: row;
+            }
+
+            ul li {
+                margin: 10px 7px;
+                font-size: 18px;
+            }
+        }
