--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-left: 50px;
 }
 
 .menu {
@@ -35,10 +36,9 @@ body {
     flex-direction: column;
     align-items: left;
     justify-content: space-between;
-    padding: 30px;
+    padding: 10px 20px;
     list-style: none;
     width: minmax(50px, 450px);
-    margin-right: 2px;
 }
 
 ul li {
@@ -57,12 +57,12 @@ ul li a:hover {
     color: #c9cebd;
     transition: 0.5s;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .logo-div {
-    font size: 20px;
+    font-size: 20px;
     /*background-color: yellow;*/
-    margin-left: 50px;
 }
 
 .logo-paragraph {
@@ -70,7 +70,13 @@ ul li a:hover {
     font-weight: bold;
 }
 
+main {
+    grid-column: 1 / 13;
+    margin-bottom: -3rem;
+}
+
 .item-2 {
+    margin-bottom: 1rem;
     grid-column: 1 / 13;
     grid-row: 2 / 3;
     border-radius: 10px;
@@ -82,16 +88,20 @@ ul li a:hover {
 }
 
 .item-3 {
+    margin-bottom: 1rem;
     grid-column: 1 / 13;
     grid-row: 3 / 4;
     background-color: #B2BCAA;
     border-radius: 10px;
+    padding: 10px 8px;
+    text-align: left;
     /*width: 95%;
   margin-right: auto;
   margin-left: auto;*/
 }
 
 .item-4 {
+    margin-bottom: 1rem;
     grid-column: 1 / 13;
     grid-row: 4 / 5;
     background-color: #C9CEBD;
@@ -131,6 +141,7 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
+    font-family: bold;
     margin-left: 150px;
     margin-bottom: 10px;
     margin-top: 8px;
@@ -138,15 +149,16 @@ button {
     position: absolute;
     right: 150px;
     bottom: 22px;
-    /*transition: 0.3s;*/
+
 
 }
 
 button:hover {
-    border: 2px solid #64403E;
+    border: 1px solid #64403E;
     background-color: #C9CEBD;
     color: #64403E;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 .item-5 {
@@ -154,6 +166,8 @@ button:hover {
     grid-row: 5 / 6;
     background-color: #B2BCAA;
     border-radius: 10px;
+    padding: 10px 8px;
+    text-align: left;
 }
 
 
@@ -181,12 +195,9 @@ button:hover {
         max-height: 120px;
     }
 
-    .item-2,
+    /*.item-2,
     .item-3,
-    .item-5 {
-        text-align: center;
-        padding: 20px;
-    }
+    .item-5 {text-align: center;}*/
 
     p {
         margin-top: 5px;
@@ -206,10 +217,15 @@ button:hover {
         font-style: italic;
         color: #C9CEBD;
 
-        /*item-3 h3,
-        item-5 h3 {
+        /*.item-3 h3,
+        .item-5 h3 {
             text-align: center;
+            margin-buttom: 8px;
         }*/
+        .paragraph-title {
+            text-align: center;
+            margin-buttom: 20px;
+        }
 
         @media screen and (min-width: 375px) {
             .menu {
