--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,400;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,14 +9,14 @@
 
 body {
     background-color: #c9cebd;
+    font-family: roboto, sans-serif;
 }
 
 .container {
     padding: 2rem;
     display: grid;
     /*grid-template-columns: minmax(100px,1fr) minmax(100px,1fr) minmax(100px,1fr) minmax(100px,1fr);*/
-    '
- grid-template-columns: repeat, (12, 1fr);
+    grid-template-columns: repeat, (12, 1fr);
     grid-template-rows: 10% 1rf 4rf 3rf 1rf 10%;
     height: 100vh;
     row-gap: 1rem;
@@ -70,6 +73,36 @@ ul li a:hover {
     font-weight: bold;
 }
 
+/*media queries for 375px size and bigger*/
+
+@media screen and (min-width: 375px) {
+    .menu {
+        flex-direction: row;
+    }
+
+    ul li {
+        margin: 10px 5px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (min-width: 500px) {
+
+    ul li {
+        margin: 10px 5px;
+        font-size: 14px;
+    }
+}
+
+@media screen and (min-width: 809px) {
+
+    ul li {
+        margin: 10px 5px;
+        font-size: 16px;
+    }
+}
+
+
 main {
     grid-column: 1 / 13;
     margin-bottom: -3rem;
@@ -91,154 +124,122 @@ main {
 h1 {
     text-transform: uppercase;
     color: #C9CEBD;
+    font-family: Urbanist, sans-serif;
 }
 
 h2 {
     font-style: italic;
     color: #838E83;
+    font-family: Urbanist, sans-serif;
+    font-weight: 700;
+}
 
-    .item-3 {
-        margin-bottom: 1rem;
-        grid-column: 1 / 13;
-        grid-row: 3 / 4;
-        background-color: #B2BCAA;
-        border-radius: 10px;
-        padding: 10px 8px;
-        text-align: left;
-        /*width: 95%;
-  margin-right: auto;
-  margin-left: auto;*/
-    }
+.item-3 {
+    margin-bottom: 1rem;
+    grid-column: 1 / 13;
+    grid-row: 3 / 4;
+    background-color: #B2BCAA;
+    border-radius: 10px;
+    padding: 10px 8px;
+    text-align: left;
+}
 
-    .item-4 {
-        margin-bottom: 1rem;
-        grid-column: 1 / 13;
-        grid-row: 4 / 5;
-        background-color: #C9CEBD;
-        border: 3px solid #64403E;
-        border-radius: 10px;
-        position: relative;
-        /*position: relative;
+.item-4 {
+    margin-bottom: 1rem;
+    grid-column: 1 / 13;
+    grid-row: 4 / 5;
+    background-color: #C9CEBD;
+    border: 3px solid #64403E;
+    border-radius: 10px;
+    position: relative;
+    /*position: relative;
     background: #eee;
     overflow: hidden;
     padding: 0;*/
-    }
+}
 
-    .item-4 iframe {
-        border-radius: 10px;
-    }
+.item-4 iframe {
+    border-radius: 10px;
+}
 
-    /*.item-4 iframe {
-    overflow: hidden;
-}*/
-
-    /*.item-4 iframe {
+button {
+    background-color: #64403E;
+    /* Green */
+    border: none;
+    color: #C9CEBD;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    font-family: bold;
+    margin-left: 150px;
+    margin-bottom: 10px;
+    margin-top: 8px;
+    border-radius: 12px;
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}*/
+    right: 150px;
+    bottom: 22px;
+}
 
-    /*https://stackoverflow.com/questions/33451481/scale-and-reposition-iframe-like-background-size-cover*/
-    button {
-        background-color: #64403E;
-        /* Green */
-        border: none;
-        color: #C9CEBD;
-        padding: 10px 22px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 12px;
-        font-family: bold;
-        margin-left: 150px;
-        margin-bottom: 10px;
-        margin-top: 8px;
-        border-radius: 12px;
-        position: absolute;
-        right: 150px;
-        bottom: 22px;
+button:hover {
+    border: 1px solid #64403E;
+    background-color: #C9CEBD;
+    color: #64403E;
+    cursor: pointer;
+    transition: 0.3s;
+}
 
+.item-5 {
+    grid-column: 1 / 13;
+    grid-row: 5 / 6;
+    background-color: #B2BCAA;
+    border-radius: 10px;
+    padding: 10px 8px;
+    text-align: left;
+}
 
-    }
+.item-6 {
+    grid-column: 1 / 13;
+    grid-row: 6 / 7;
+    background-color: #6C6061;
+}
 
-    button:hover {
-        border: 1px solid #64403E;
-        background-color: #C9CEBD;
-        color: #64403E;
-        cursor: pointer;
-        transition: 0.3s;
-    }
+.social-networks {
+    text-align: center;
+}
 
-    .item-5 {
-        grid-column: 1 / 13;
-        grid-row: 5 / 6;
-        background-color: #B2BCAA;
-        border-radius: 10px;
-        padding: 10px 8px;
-        text-align: left;
-    }
+.social-networks>li {
+    display: inline;
+}
 
+.social-networks i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #c9cebd;
+}
 
-    .item-6 {
-        grid-column: 1 / 13;
-        grid-row: 6 / 7;
-        background-color: #6C6061;
-    }
-
-    .social-networks {
-        text-align: center;
-    }
-
-    .social-networks>li {
-        display: inline;
-    }
-
-    .social-networks i {
-        font-size: 160%;
-        margin: 1%;
-        padding: 5%;
-        color: #c9cebd;
-
-        .text {
-            max-height: 120px;
-        }
-
-        /*.item-2,
+/*.item-2,
     .item-3,
     .item-5 {text-align: center;}*/
 
-        p {
-            margin-top: 5px;
-            margin-bottom: 5px;
-            text-indent: 15px;
-            text-align: left;
-            letter-spacing: 2px;
-            font-size: 12px;
-        }
+.p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-indent: 15px;
+    text-align: left;
+    letter-spacing: 2px;
+    font-size: 10px;
+}
 
+.paragraph-title {
+    text-align: center;
+    margin-buttom: 20px;
+}
 
-
-        /*.item-3 h3,
+/*.item-3 h3,
         .item-5 h3 {
             text-align: center;
             margin-buttom: 8px;
         }*/
-        .paragraph-title {
-            text-align: center;
-            margin-buttom: 20px;
-        }
-
-        /*media queries*/
-
-        @media screen and (min-width: 375px) {
-            .menu {
-                flex-direction: row;
-            }
-
-            ul li {
-                margin: 10px 7px;
-                font-size: 18px;
-            }
-        }
