--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,8 @@ body {
     padding: 2rem;
     display: grid;
     grid-template-columns: repeat, (12, 1fr);
-    grid-template-rows: 10% 1rf 4rf 3rf 1rf 10%;
+    /*grid-template-rows: 10% 1rf 4rf 3rf 1rf 10%;*/
+    grid-template-rows: 10% repeat (10, rf) 10%;
     height: 100vh;
     row-gap: 1rem;
     column-gap: 1rem;
@@ -108,13 +109,14 @@ ul li a:hover {
 
 main {
     grid-column: 1 / 13;
-    margin-bottom: -3rem;
+    grid-row: 2 / 12;
 }
 
+/*to solve the gap between p2 and footer - caused by the main section*/
 .item-2 {
     margin-bottom: 1rem;
     grid-column: 1 / 13;
-    grid-row: 2 / 3;
+    grid-row: 2 / 4;
     border-radius: 10px;
     background-image: url("../images/sunshine.png");
     background-repeat: no-repeat, no-repeat;
@@ -148,7 +150,7 @@ h2 {
 .item-3 {
     margin-bottom: 1rem;
     grid-column: 1 / 13;
-    grid-row: 3 / 4;
+    grid-row: 4 / 6;
     background-color: #B2BCAA;
     border-radius: 10px;
     padding: 10px 15px;
@@ -158,7 +160,7 @@ h2 {
 .item-4 {
     margin-bottom: 1rem;
     grid-column: 1 / 13;
-    grid-row: 4 / 5;
+    grid-row: 6 / 9;
     background-color: #C9CEBD;
     border: 3px solid #64403E;
     border-radius: 10px;
@@ -203,7 +205,7 @@ button:hover {
 
 .item-5 {
     grid-column: 1 / 13;
-    grid-row: 5 / 6;
+    grid-row: 9 / 12;
     background-color: #B2BCAA;
     border-radius: 10px;
     padding: 10px 15px;
@@ -213,7 +215,7 @@ button:hover {
 
 .item-6 {
     grid-column: 1 / 13;
-    grid-row: 6 / 7;
+    grid-row: 12 / 13;
     background-color: #6C6061;
 }
 
@@ -250,8 +252,4 @@ button:hover {
     margin-bottom: 20px;
 }
 
-/*.item-3 h3,
-        .item-5 h3 {
-            text-align: center;
-            margin-buttom: 8px;
-        }*/
+/*style for form page*/
