style: center the photo in Form Page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,8 +278,9 @@ button:hover {
 }
 
 .form-image {
-    width: 400px;
-    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /*button {
