--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,8 @@ body {
     align-items: center;
     justify-content: space-between;
     padding-left: 50px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .menu {
@@ -217,6 +219,8 @@ button:hover {
     grid-column: 1 / 13;
     grid-row: 12 / 13;
     background-color: #6C6061;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .social-networks {
@@ -260,27 +264,23 @@ button:hover {
     grid-row: 2 / 3;
     background-color: yellow;
 }*/
+.form-main {}
 
 .form-item-3 {
     grid-column: 1 / 13;
-    grid-row: 3 / 9;
-    background-color: orange;
-    /*width: 95%;
-  margin-right: auto;
-  margin-left: auto;*/
+    grid-row: 3 / 9; 
 }
 
 .form-item-4 {
     grid-column: 1 / 13;
     grid-row: 9 / 12;
-    /*border: 5px solid rgba(255, 255, 255, .5);
-  border-radius: 10px;*/
 }
 
 .form-image {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 /*button {
