--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,7 @@ body {
     display: grid;
     grid-template-columns: repeat (12, 1fr);
     /*grid-template-rows: 10% 1rf 4rf 3rf 1rf 10%;*/
-    grid-template-rows: 10% repeat (10, rf) 10%;
-    height: 100vh;
+    grid-template-rows: 10% repeat (10, 1rf) 10%;
     row-gap: 1rem;
     column-gap: 1rem;
 }
@@ -39,17 +38,16 @@ body {
 .menu {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: flex-start;
     justify-content: space-between;
     padding: 10px 20px;
     list-style: none;
-    width: minmax(50px, 450px);
 }
 
 ul li {
     margin: 10px 0;
     font-size: 14px;
-    font-weight: 700px;
+    font-weight: 500;
     color: #c9cebd;
 }
 
@@ -136,7 +134,7 @@ main {
     }
 }
 
-*/ h1 {
+h1 {
     text-transform: uppercase;
     color: #C9CEBD;
     font-family: Urbanist, sans-serif;
