--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,14 +288,20 @@ legend {
 .form-item-4 {
     grid-column: 1 / 13;
     grid-row: 9 / 12;
+    background-image: url("../images/hosenbiene.PNG");
+    height: 500px;
+    background-repeat: no-repeat, no-repeat;
+    background-position: left;
+    background-size: cover;
 }
 
-.form-image {
-    display: flex;
+/*.form-image {
+    grid-column: 1 / 13;
+    /*display: flex;
     align-items: center;
     justify-content: center;
 
-}
+}*/
 
 /*button {
   background-color: #4CAF50;  Green 
