--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,19 @@ body {
     border-top-right-radius: 10px;
 }
 
+.logo-link {
+    font-size: 12px;
+    color: #c9cebd;
+    font: Urbanist, sans-serif;
+    font-weight: 700;
+    display: block;
+}
+
+.logo-image {
+    border-radius: 50%;
+    border: 1px solid #c9cebd;
+}
+
 .menu {
     display: flex;
     flex-direction: column;
