--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ legend {
 }
 
 input {
-    width: 50%;
+    width: 70%;
     height: 30px;
     border: 2px solid #6C6061;
     border-radius: 3px;
@@ -329,7 +329,7 @@ input {
 }
 
 textarea {
-    width: 50%;
+    width: 70%;
     border: 2px solid #6C6061;
     border-radius: 3px;
 }
@@ -347,7 +347,6 @@ textarea {
     font-size: 12px;
     font-weight: 600;
     letter-spacing: 3px;
-
 }
 
 .submit-button:hover {
@@ -360,25 +359,12 @@ textarea {
 
 
 .form-section-div {
-    width: 300px;
-    height: 300px;
+    width: 10px;
+    height: 10px;
     position: absolute;
     top: 140px;
-    right: -190px;
+    right: -1000px;
 }
-
-@media screen and (min-width: 500px) {
-    .form-section-div {
-        right: -120px;
-    }
-}
-
-@media screen and (min-width: 767px) {
-    .form-section-div {
-        right: -30px;
-    }
-}
-
 
 .form-section-photo {
     width: 300px;
@@ -389,9 +375,43 @@ textarea {
     opacity: 0.3;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 500px) {
+
+    input {
+        width: 50%;
+    }
+
+    textarea {
+        width: 50%;
+    }
+
     .form-section-div {
-        right: 20px;
+        right: 180px;
+        top: 180px;
+    }
+
+    .form-section-photo {
+        width: 170px;
+        height: 170px;
+    }
+}
+
+@media screen and (min-width: 767px) {
+    .form-section-div {
+        right: 300px;
+        top: 180px;
+    }
+
+    .form-section-photo {
+        width: 270px;
+        height: 270px;
+    }
+}
+
+@media screen and (min-width: 920px) {
+    .form-section-div {
+        right: 380px;
+        top: 140px;
     }
 
     .form-section-photo {
@@ -400,9 +420,10 @@ textarea {
     }
 }
 
-@media screen and (min-width: 920px) {
+@media screen and (min-width: 1024px) {
     .form-section-div {
-        right: 50px;
+        right: 425px;
+        top: 105px;
     }
 
     .form-section-photo {
@@ -410,6 +431,8 @@ textarea {
         height: 400px;
     }
 }
+
+
 
 .form-item-4 {
     grid-column: 1 / 13;
