--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,6 +396,27 @@ textarea {
     }
 }
 
+@media screen and (min-width: 650px) {
+
+    input {
+        width: 50%;
+    }
+
+    textarea {
+        width: 50%;
+    }
+
+    .form-section-div {
+        right: 260px;
+        top: 180px;
+    }
+
+    .form-section-photo {
+        width: 250px;
+        height: 250px;
+    }
+}
+
 @media screen and (min-width: 767px) {
     .form-section-div {
         right: 300px;
