--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,9 +143,9 @@ main {
 
 /*to solve the gap between p2 and footer - caused by the main section*/
 .item-2 {
-    margin-bottom: 1rem;
+
     grid-column: 1 / 13;
-    grid-row: 2 / 4;
+    grid-row: 1 / 2;
     border-radius: 10px;
     background-image: url("../images/sunshine.png");
     background-repeat: no-repeat, no-repeat;
@@ -177,7 +177,7 @@ h2 {
 }
 
 .item-3 {
-    margin-bottom: 1rem;
+
     grid-column: 1 / 13;
     grid-row: 4 / 6;
     background-color: #B2BCAA;
@@ -187,7 +187,7 @@ h2 {
 }
 
 .item-4 {
-    margin-bottom: 1rem;
+
     grid-column: 1 / 13;
     grid-row: 6 / 9;
     background-color: #C9CEBD;
@@ -286,12 +286,6 @@ button:hover {
 }
 
 /*style for the Form Page page*/
-
-
-.form-main {
-    grid-column: 1 / 13;
-    grid-row: 2 / 12;
-}
 
 .form-item-2 {
     grid-column: 1 / 13;
@@ -494,3 +488,51 @@ textarea {
   font-size: 16px;
   margin-left: 100px;
 }*/
+
+/*styling About Us page*/
+main {
+    display: grid;
+    grid-template-columns: repeat (12, 1fr);
+    grid-template-rows: repeat (12, 1fr);
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
+.about-item-1 {
+    grid-column: 1 / 9;
+    grid-row: 1 / 7;
+    background-color: gray;
+}
+
+.about-item-1 {
+    grid-column: 1 / 13;
+    grid-row: 1 / 3;
+    background-color: yellowgreen;
+}
+
+.about-item-2 {
+    grid-column: 1 / 9;
+    grid-row: 3 / 7;
+    background-color: pink;
+}
+
+.about-item-3 {
+    grid-column: 1 / 4;
+    grid-row: 7 / 13;
+    background-color: blue;
+}
+
+.about-item-4 {
+    grid-column: 4 / 9;
+    grid-row: 7 / 13;
+    background-color: green;
+}
+
+.about-item-5 {
+    grid-column: 9 / 13;
+    grid-row: 3 / 13;
+    background-image: url("../images/meeting.png");
+    background-repeat: no-repeat, no-repeat;
+    background-position: top;
+    background-size: cover;
+}
