--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,41 +498,29 @@ main {
     column-gap: 1rem;
 }
 
-.about-item-1 {
-    grid-column: 1 / 9;
-    grid-row: 1 / 7;
-    background-color: gray;
-}
-
-.about-item-1 {
-    grid-column: 1 / 13;
-    grid-row: 1 / 3;
-    background-color: yellowgreen;
-}
-
 .about-item-2 {
-    grid-column: 1 / 9;
-    grid-row: 3 / 7;
+    grid-column: 1 / 13;
+    grid-row: 3 / 5;
     background-color: pink;
 }
 
 .about-item-3 {
-    grid-column: 1 / 4;
-    grid-row: 7 / 13;
+    grid-column: 1 / 8;
+    grid-row: 9 / 13;
     background-color: blue;
 }
 
 .about-item-4 {
-    grid-column: 4 / 9;
-    grid-row: 7 / 13;
+    grid-column: 8 / 13;
+    grid-row: 9 / 13;
     background-color: green;
 }
 
 .about-item-5 {
-    grid-column: 9 / 13;
-    grid-row: 3 / 13;
+    grid-column: 1 / 13;
+    grid-row: 5 / 9;
     background-image: url("../images/meeting.png");
-    background-repeat: no-repeat, no-repeat;
-    background-position: top;
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
 }
