--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,14 @@ h2 {
     font-weight: 700;
 }
 
+.map-source {
+    src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db?cover=false"
+    width="100%"
+    height="500px"
+    frameborder="0"
+    allowfullscreen allow="geolocation"
+}
+
 .item-3 {
 
     grid-column: 1 / 13;
@@ -500,27 +508,54 @@ main {
 
 .about-item-2 {
     grid-column: 1 / 13;
-    grid-row: 3 / 5;
+    grid-row: 3 / 4;
     background-color: pink;
 }
 
 .about-item-3 {
-    grid-column: 1 / 8;
-    grid-row: 9 / 13;
-    background-color: blue;
+    grid-column: 1 / 13;
+    grid-row: 11 / 13;
+    background-image: url("../images/boden_regenwurm-1024x1024.webp");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .about-item-4 {
-    grid-column: 8 / 13;
-    grid-row: 9 / 13;
-    background-color: green;
+    grid-column: 1 / 13;
+    grid-row: 8 / 11;
+
 }
 
 .about-item-5 {
     grid-column: 1 / 13;
-    grid-row: 5 / 9;
+    grid-row: 4 / 8;
     background-image: url("../images/meeting.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+@media screen and (min-width: 809px) {
+
+    .about-item-2 {
+        grid-column: 1 / 4;
+        grid-row: 3 / 5;
+    }
+
+    .about-item-3 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 13;
+    }
+
+    .about-item-4 {
+        grid-column: 3 / 4;
+        grid-row: 5 / 13;
+    }
+
+    .about-item-5 {
+        grid-column: 4 / 13;
+        grid-row: 3 / 13;
+    }
+
 }
