style: style form section and add semantic values to html files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     font-family: roboto, sans-serif;
 }
 
-.container {
+.page-container {
     padding: 2rem;
     display: grid;
     grid-template-columns: repeat (12, 1fr);
@@ -23,7 +23,7 @@ body {
 }
 
 /*header*/
-.item-1 {
+.header-section {
     grid-column: 1 / 13;
     grid-row: 1 / 2;
     background-color: #6C6061;
@@ -304,9 +304,10 @@ button:hover {
     grid-column: 1 / 13;
     grid-row: 4 / 9;
     position: relative;
+    padding: 25px 20px;
 }
 
-
+/*check padding in the form section*/
 legend {
     font-size: 48px;
     font-family: Urbanist, sans-serif;
@@ -323,15 +324,14 @@ legend {
 }
 
 input {
-    width: 70%;
+    width: 95%;
     height: 30px;
     border: 2px solid #6C6061;
     border-radius: 3px;
-    padding-left: 5px;
 }
 
 textarea {
-    width: 70%;
+    width: 95%;
     border: 2px solid #6C6061;
     border-radius: 3px;
 }
@@ -497,7 +497,7 @@ textarea {
   margin-left: 100px;
 }*/
 
-/*styling About Us page*/
+/*styling About Us page
 main {
     display: grid;
     grid-template-columns: repeat (12, 1fr);
@@ -558,4 +558,30 @@ main {
         grid-row: 3 / 13;
     }
 
+}*/
+
+/*responsive grid fill*/
+.container {
+    display: grid;
+    row-gap: 10px;
+    column-gap: 10px;
+}
+
+.grid-container--fill {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-row: repeat (6, 200px);
+
+}
+
+.child-div {
+    background-color: green;
+    width: 250px;
+    height: 250px;
+
+}
+
+.child-div-1,
+.child-div-3,
+.child-div-5 {
+    background-color: gray;
 }
