--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ body {
     padding: 2rem;
     display: grid;
     grid-template-columns: repeat (12, 1fr);
-    /*grid-template-rows: 10% 1rf 4rf 3rf 1rf 10%;*/
     grid-template-rows: 10% repeat (10, 1rf) 10%;
     row-gap: 1rem;
     column-gap: 1rem;
@@ -130,7 +129,7 @@ ul li a:hover {
         font-size: 16px;
     }
 
-    .item-2 {
+    .title-section {
         background-position: center;
     }
 }
@@ -142,7 +141,7 @@ main {
 }
 
 /*to solve the gap between p2 and footer - caused by the main section*/
-.item-2 {
+.title-section {
 
     grid-column: 1 / 13;
     grid-row: 1 / 2;
@@ -158,7 +157,7 @@ main {
 /*the lines bellow don^t work*/
 @media screen and (min-width: 850px) {
 
-    .item-2 {
+    .title-section {
         background-position: center;
     }
 }
@@ -274,10 +273,6 @@ button:hover {
     padding: 5%;
     color: #c9cebd;
 }
-
-/*.item-2,
-    .item-3,
-    .item-5 {text-align: center;}*/
 
 .p {
     margin-top: 5px;
@@ -568,6 +563,7 @@ main {
 }
 
 .grid-container--fill {
+    display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-template-row: repeat (6, 200px);
 
@@ -580,7 +576,7 @@ main {
 
 }
 
-.child-div-1,
+
 .child-div-3,
 .child-div-5 {
     background-color: gray;
