--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,12 @@ body {
 }
 
 .page-container {
-    padding: 2rem;
     display: grid;
     grid-template-columns: repeat (12, 1fr);
     grid-template-rows: 10% repeat (10, 1rf) 10%;
     row-gap: 1rem;
     column-gap: 1rem;
+    padding: 2rem;
 }
 
 /*header*/
@@ -146,7 +146,7 @@ main {
     grid-column: 1 / 13;
     grid-row: 1 / 2;
     border-radius: 10px;
-    background-image: url("../images/sunshine.png");
+    background-image: url("../images/sunshine.webp");
     background-repeat: no-repeat, no-repeat;
     background-position: top;
     background-size: cover;
@@ -251,7 +251,7 @@ button:hover {
 
 }
 
-.item-6 {
+footer {
     grid-column: 1 / 13;
     grid-row: 12 / 13;
     background-color: #6C6061;
@@ -521,7 +521,7 @@ main {
 
 }*/
 
-/*responsive grid fill*/
+/*About-Us_Page*/
 .container {
     display: grid;
     row-gap: 10px;
@@ -531,10 +531,40 @@ main {
 .grid-container--fill {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-row: repeat (6, 200px);
+    grid-template-rows: repeat (6, 200px);
     margin-top: 41px;
     column-gap: 82px;
     row-gap: 41px;
+}
+
+.contribute-page-photo,
+.about-us-photo-2,
+.about-us-photo-4,
+.about-us-photo-6 {
+    border: 3px solid #64403E;
+    border-radius: 10px;
+}
+
+.about-us-photo-2 {
+    background-image: url("../images/meeting.webp");
+}
+
+.about-us-photo-4 {
+    background-image: url("../images/boden_regenwurm-1024x1024.webp");
+
+}
+
+.about-us-photo-6 {
+    background-image: url("../images/Kapuzinerkresse1-scaled-e1658159688319-1024x683.webp");
+}
+
+.about-us-photo-2,
+.about-us-photo-4,
+.about-us-photo-6 {
+    height: 500px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .child-div {
