--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     row-gap: 1rem;
     column-gap: 1rem;
     padding: 2rem;
+    
 }
 
 /*header*/
@@ -149,7 +150,7 @@ main {
     background-image: url("../images/sunshine.webp");
     background-repeat: no-repeat, no-repeat;
     background-position: top;
-    background-size: cover;
+    background-size: contain;
     text-align: center;
     border: none;
 }
@@ -175,13 +176,7 @@ h2 {
     font-weight: 700;
 }
 
-.map-source {
-    src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db?cover=false"
-    width="100%"
-    height="500px"
-    frameborder="0"
-    allowfullscreen allow="geolocation"
-}
+
 
 .text-explanation {
 
@@ -202,14 +197,6 @@ h2 {
     border: 3px solid #64403E;
     border-radius: 10px;
     position: relative;
-    /*position: relative;
-    background: #eee;
-    overflow: hidden;
-    padding: 0;*/
-}
-
-.map-section iframe {
-    border-radius: 10px;
 }
 
 button {
@@ -429,16 +416,22 @@ textarea {
     }
 }
 
-.contribute-page-photo {
+.photo-section-div {
     grid-column: 1 / 13;
     grid-row: 9 / 12;
+}
+
+.contribute-page-photo {
     background-image: url("../images/Hosenbiene-small.webp");
     height: 500px;
+    width: 100%;
     background-repeat: no-repeat, no-repeat;
     background-position: center;
     background-size: cover;
+    overflow-
 }
 
+/*remove scrolbar from the picture"/
 /*.form-image {
     grid-column: 1 / 13;
     /*display: flex;
