--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
     row-gap: 1rem;
     column-gap: 1rem;
     padding: 2rem;
-    
+
 }
 
 /*header*/
@@ -150,7 +150,7 @@ main {
     background-image: url("../images/sunshine.webp");
     background-repeat: no-repeat, no-repeat;
     background-position: top;
-    background-size: contain;
+    background-size: cover;
     text-align: center;
     border: none;
 }
@@ -245,6 +245,7 @@ footer {
     background-color: #6C6061;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    margin-top: 1rem;
 }
 
 .social-networks {
@@ -307,7 +308,7 @@ legend {
 }
 
 input {
-    width: 95%;
+    width: 100%;
     height: 30px;
     border: 2px solid #6C6061;
     border-radius: 3px;
@@ -315,12 +316,14 @@ input {
 }
 
 textarea {
-    width: 95%;
+    width: 100%;
     border: 2px solid #6C6061;
     border-radius: 3px;
 }
 
 .submit-button {
+    display: block;
+    max-width: 250px;
     margin: 8px 0;
     background-color: #64403E;
     border: none;
@@ -335,6 +338,7 @@ textarea {
     letter-spacing: 3px;
 }
 
+/*text decoration above none*/
 .submit-button:hover {
     border: 1px solid #64403E;
     background-color: #C9CEBD;
@@ -419,6 +423,8 @@ textarea {
 .photo-section-div {
     grid-column: 1 / 13;
     grid-row: 9 / 12;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .contribute-page-photo {
