--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,8 +582,9 @@ ol {
 }
 
 .conntact-list li {
+    font-family: roboto, sans-serif;
     color: black;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
     list-style-type: none;
     padding-left: 20px;
