--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -595,7 +595,7 @@ main {
 }
 
 .ethical-principles li {
-    margin: 40px 0;
+    margin-top: 40px;
     margin-left: 20px;
     list-style: none;
 
@@ -609,20 +609,28 @@ main {
 .list-text-span {
     font-size: inherit;
     font-weight: 400;
-    margin-left: 10px;
+    margin-left: 25px;
+}
+
+.conntact-list {
+    margin-top: 40px;
 }
 
 .conntact-list li {
     font-family: roboto, sans-serif;
     color: black;
-    font-size: 12px;
-    font-weight: bold;
+    font-size: 14px;
     list-style-type: none;
-    padding-left: 20px;
+    padding-left: 10px;
+    margin: 10px 0;
 }
 
-.conntact-list .iban-span {
-    font-weight: 12px;
+.conntact-list-span {
+    font-weight: bold;
+}
+
+#bank-account-details {
+    text-indent: 0;
 }
 
 @media screen and (min-width: 767x) {
