--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@ body {
     row-gap: 1rem;
     column-gap: 1rem;
     padding: 2rem;
-
 }
 
 /*header*/
@@ -36,17 +35,6 @@ body {
     border-top-right-radius: 10px;
 }
 
-/*.logo-link {
-    width: 30px;
-    height: 30px;
-    font-size: 12px;
-    color: #c9cebd;
-    font: Urbanist, sans-serif;
-    font-weight: 700;
-    text-decoration: none;
-}*/
-
-
 .logo-image {
     width: 30px;
     height: 30px;
@@ -54,17 +42,14 @@ body {
     border: 1px solid #c9cebd;
 }
 
-/*@media screen and (min-width: 375px) {
-    .logo-link {
+@media screen and (min-width: 375px) {
+    .logo-image {
         width: 35px;
         height: 35px;
     }
+}
 
-    .item-1 {
-        padding-left:
-    }
-}*/
-.menu {
+*/ .menu {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -633,7 +618,7 @@ main {
     text-indent: 0;
 }
 
-@media screen and (min-width: 767x) {
+@media screen and (min-width: 767px) {
     .child-div {
         width: 352px;
         height: 352px;
