--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,8 @@ main {
     text-align: center;
     border: none;
     padding-top: 60px;
+    padding-right: 15px;
+    padding-left: 15px;
     margin-bottom: 1rem;
 }
 
@@ -152,7 +154,12 @@ h1 {
     color: black;
     font-family: Urbanist, sans-serif;
     font-weight: 700;
-    margin-bottom: 15px;
+    margin-bottom: 8px;
+    background-color: #C9CEBD;
+    opacity: 0.8;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    padding: 6px;
 }
 
 h2 {
@@ -161,6 +168,11 @@ h2 {
     color: black;
     font-family: Urbanist, sans-serif;
     font-weight: 600;
+    background-color: #C9CEBD;
+    opacity: 0.8;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 6px;
 }
 
 @media screen and (min-width: 810px) {
